added filters on duty to show for an account, identifier, or username.
