# spec/swagger.yaml
@@ -2669,7 +2669,7 @@ paths:
           description: Unique primary key for the duty.
       responses:
         200:
-          description: Department Found
+          description: Duty Found
           headers:
             X-RateLimit-Limit:
               description: The number of allowed requests in the current period
@@ -2705,7 +2705,118 @@ paths:
           description: Unique code value for the duty.
       responses:
         200:
-          description: Department Found
+          description: Duty Found
+          headers:
+            X-RateLimit-Limit:
+              description: The number of allowed requests in the current period
+              type: integer
+            X-RateLimit-Remaining:
+              description: The number of remaining requests in the current period
+              type: integer
+            X-RateLimit-Reset:
+              description: The number of seconds left in the current period
+              type: integer
+          schema:
+            properties:
+              data:
+                $ref: '#/definitions/transformedDuty'
+        401:
+          $ref: '#/responses/401'
+        429:
+          $ref: '#/responses/429'
+
+  /duties/account/{id}:
+    get:
+      tags:
+        - Duties
+      summary: Show a list of Duties that an account is a member of.
+      description: Retrieve a list of duties than an account is a member of by the account id.
+      produces:
+        - application/json
+      parameters:
+        - $ref: '#/parameters/pages'
+        - name: id
+          in: path
+          required: true
+          type: integer
+          description: An account ID.
+      responses:
+        200:
+          description: A list of duties.
+          headers:
+            X-RateLimit-Limit:
+              description: The number of allowed requests in the current period
+              type: integer
+            X-RateLimit-Remaining:
+              description: The number of remaining requests in the current period
+              type: integer
+            X-RateLimit-Reset:
+              description: The number of seconds left in the current period
+              type: integer
+          schema:
+            properties:
+              data:
+                $ref: '#/definitions/transformedDuty'
+        401:
+          $ref: '#/responses/401'
+        429:
+          $ref: '#/responses/429'
+
+  /duties/identifier/{identifier}:
+    get:
+      tags:
+        - Duties
+      summary: Show a list of Duties that an account is a member of.
+      description: Retrieve a list of duties than an account is a member of by the account identifier.
+      produces:
+        - application/json
+      parameters:
+        - $ref: '#/parameters/pages'
+        - name: identifier
+          in: path
+          required: true
+          type: string
+          description: An account identifier.
+      responses:
+        200:
+          description: A list of duties.
+          headers:
+            X-RateLimit-Limit:
+              description: The number of allowed requests in the current period
+              type: integer
+            X-RateLimit-Remaining:
+              description: The number of remaining requests in the current period
+              type: integer
+            X-RateLimit-Reset:
+              description: The number of seconds left in the current period
+              type: integer
+          schema:
+            properties:
+              data:
+                $ref: '#/definitions/transformedDuty'
+        401:
+          $ref: '#/responses/401'
+        429:
+          $ref: '#/responses/429'
+
+  /duties/username/{username}:
+    get:
+      tags:
+        - Duties
+      summary: Show a list of Duties that an account is a member of.
+      description: Retrieve a list of duties than an account is a member of by the account username.
+      produces:
+        - application/json
+      parameters:
+        - $ref: '#/parameters/pages'
+        - name: username
+          in: path
+          required: true
+          type: string
+          description: An account username.
+      responses:
+        200:
+          description: A list of duties.
           headers:
             X-RateLimit-Limit:
               description: The number of allowed requests in the current period
